--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,11 @@ if(BUILD_TESTING)
 endif()
 
 #-----------------------------------------------------------------------------
+# Benchmarks
+#-----------------------------------------------------------------------------
+add_subdirectory(benchmarks)
+
+#-----------------------------------------------------------------------------
 # Install and export targets - support 'make install' or equivalent
 #-----------------------------------------------------------------------------
 include(CMakePackageConfigHelpers)
