--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -8,6 +8,8 @@
 # by the Free Software Foundation.
 # See the COPYING file for more information.
 ################################################################################
-add_executable(test_perf_rectangle_intersects RectangleIntersectsPerfTest.cpp)
-target_link_libraries(test_perf_rectangle_intersects PRIVATE geos)
-add_test(NAME test_perf_rectangle_intersects COMMAND test_perf_rectangle_intersects)
+add_executable(perf_class_sizes ClassSizes.cpp)
+target_link_libraries(perf_class_sizes PRIVATE geos)
+
+add_subdirectory(operation)
+add_subdirectory(capi)
