--- a/benchmarks/capi/CMakeLists.txt
+++ b/benchmarks/capi/CMakeLists.txt
@@ -8,12 +8,11 @@
 # by the Free Software Foundation.
 # See the COPYING file for more information.
 ################################################################################
-add_executable(test_perf_memleak_mp_prep memleak_mp_prep.c)
+add_executable(perf_memleak_mp_prep memleak_mp_prep.c)
 # test_perf_memleak_mp_prep is not dependant against geos target,
 # but geos_c only, so need explicit include directories.
-target_include_directories(test_perf_memleak_mp_prep
+target_include_directories(perf_memleak_mp_prep
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>)
-target_link_libraries(test_perf_memleak_mp_prep PRIVATE geos_c)
-add_test(NAME test_perf_memleak_mp_prep COMMAND test_perf_memleak_mp_prep)
+target_link_libraries(perf_memleak_mp_prep PRIVATE geos_c)
