--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,11 +1,11 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 SUBDIRS = \
 	bigtest		\
 	xmltester	\
 	unit		\
-	perf        \
+	benchmarks        \
     geostest    \
     thread
 
