--- a/tests/xmltester/CMakeLists.txt
+++ b/tests/xmltester/CMakeLists.txt
@@ -25,5 +25,5 @@ target_include_directories(test_xmltester
 
 file(GLOB_RECURSE _tests ${CMAKE_CURRENT_LIST_DIR}/tests/*.xml CONFIGURE_DEPEND)
 list(FILTER _tests EXCLUDE REGEX failure)
-add_test(NAME test_xmltester COMMAND test_xmltester --test-valid-output ${_tests})
+add_test(NAME test_xml COMMAND test_xmltester --test-valid-output ${_tests})
 unset(_tests)
