Fix up autotools build after reorg of benchmark files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -327,6 +327,12 @@ include(CPack)
 add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
 
 #-----------------------------------------------------------------------------
+# "make check" workalike
+#-----------------------------------------------------------------------------
+
+add_custom_target(check COMMAND ${CMAKE_BUILD_TOOL} test)
+
+#-----------------------------------------------------------------------------
 # "make distcheck" workalike
 #-----------------------------------------------------------------------------
 
