--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,7 @@ AC_MSG_RESULT(["$CAPI_VERSION"])
 
 AM_INIT_AUTOMAKE([geos], [$VERSION], [no-define])
 AM_MAINTAINER_MODE
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
 AC_CONFIG_HEADERS([include/config.h])
 AC_PROG_CC
 
