[CMake] Add target for doc/example.cpp
Important to make sure example still compiles after C++ API changes.
Resolves #901.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -244,6 +244,11 @@ endif()
 add_subdirectory(benchmarks)
 
 #-----------------------------------------------------------------------------
+# Documentation/Examples
+#-----------------------------------------------------------------------------
+add_subdirectory(doc)
+
+#-----------------------------------------------------------------------------
 # Install and export targets - support 'make install' or equivalent
 #-----------------------------------------------------------------------------
 include(CMakePackageConfigHelpers)
