[drone] Build doxygen docs too

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -21,4 +21,8 @@ steps:
   - name: check
     image: *test-image
     commands:
-      - CXXFLAGS="-O0" make check
+      - CXXFLAGS="-O0" make check V=0
+  - name: docs
+    image: *test-image
+    commands:
+      - make doxygen
