[drone] Build doxygen docs too

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -22,3 +22,7 @@ steps:
     image: *test-image
     commands:
       - CXXFLAGS="-O0" make check V=0
+  - name: docs
+    image: *test-image
+    commands:
+      - make doxygen
