[drone] Pull image _always_

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -14,7 +14,7 @@ clone:
 steps:
   - name: build
     image: *test-image
-    pull: true
+    pull: always
     commands:
       - ./autogen.sh
       - CXXFLAGS="-O0" ./configure
