--- a/include/geos/geom/Makefile.am
+++ b/include/geos/geom/Makefile.am
@@ -24,6 +24,7 @@ geos_HEADERS = \
     Dimension.h \
     Envelope.h \
     Envelope.inl \
+    FixedSizeCoordinateSequence.h \
     GeometryCollection.h \
     GeometryCollection.inl \
     GeometryComponentFilter.h \
