Port JTS PR 468
https://github.com/locationtech/jts/pull/468

Refactor line intersection code into Intersection class.
Use new class for all line intersection computation
Unroll input conditioning for performance
Add tests to verify accuracy of conditioned double-precision intersection algorithm

--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -21,6 +21,7 @@ libalgorithm_la_SOURCES = \
 	InteriorPointArea.cpp \
 	InteriorPointLine.cpp \
 	InteriorPointPoint.cpp \
+	Intersection.cpp \
 	LineIntersector.cpp \
 	Length.cpp \
 	MinimumBoundingCircle.cpp \
@@ -32,7 +33,6 @@ libalgorithm_la_SOURCES = \
 	RayCrossingCounter.cpp \
 	RayCrossingCounterDD.cpp \
 	RobustDeterminant.cpp
-
 
 libalgorithm_la_LIBADD = \
 	locate/liblocation.la \
