--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -24,6 +24,7 @@ geos_HEADERS = \
 	InteriorPointArea.h \
 	InteriorPointLine.h \
 	InteriorPointPoint.h \
+	Intersection.h \
 	Length.h \
 	LineIntersector.h \
 	MinimumBoundingCircle.h \
