--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-7','cmake','ccache']
+          packages: ['g++-7','cmake','ccache','doxygen']
       env:
         - E="TOOL=cmake && BUILD_TYPE=Release && CXX=g++-7 && ARCH=-m64 && CC=gcc-7"
 
@@ -39,7 +39,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-7','cmake','ccache']
+          packages: ['g++-7','cmake','ccache','doxygen']
       env:
         - E="TOOL=cmake && BUILD_TYPE=Coverage && CXX=g++-7 && ARCH=-m64 && CC=gcc-7"
 
@@ -51,7 +51,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-7','ccache','git2cl']
+          packages: ['g++-7','ccache','git2cl','doxygen']
       env:
         - E="TOOL=autotools && CXX=g++-7 && ARCH=-m64 && CC=gcc-7"
 
@@ -63,7 +63,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-4.8','cmake','ccache']
+          packages: ['g++-4.8','cmake','ccache','doxygen']
       env:
         - E="TOOL=cmake && BUILD_TYPE=Release && CXX=g++-4.8 && ARCH=-m64 && CC=gcc-4.8"
 
@@ -75,7 +75,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-4.8-multilib','gcc-4.8-multilib','g++-multilib','gcc-multilib','ccache','git2cl']
+          packages: ['g++-4.8-multilib','gcc-4.8-multilib','g++-multilib','gcc-multilib','ccache','git2cl','doxygen']
       env:
         - E="TOOL=autotools && CXX=g++-4.8 && ARCH=-m32 && CC=gcc-4.8"
 
@@ -87,7 +87,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['clang-3.9','cmake','ccache']
+          packages: ['clang-3.9','cmake','ccache','doxygen']
       env:
         - E="TOOL=cmake && BUILD_TYPE=Release && CXX=clang++-3.9 && ARCH=-m64 && CC=clang-3.9"
 
@@ -99,7 +99,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['clang','cmake','ccache']
+          packages: ['clang','cmake','ccache','doxygen']
       env:
         - E="TOOL=cmake && BUILD_TYPE=Release && CXX=clang++ && ARCH=-m64 && CC=clang"
 
