Register individual tests with ctest
Allows running of a single XML file or TUT test group.

Fixes #930

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -2,6 +2,7 @@
 # Part of CMake configuration for GEOS
 #
 # Copyright (C) 2018 Mateusz Loskot <mateusz@loskot.net>
+# Copyright (C) 2019 Daniel Baston <dbaston@gmail.com>
 #
 # This is free software; you can redistribute and/or modify it under
 # the terms of the GNU Lesser General Public Licence as published
@@ -17,4 +18,16 @@ target_include_directories(test_geos_unit
   PRIVATE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>)
 
-add_test(NAME test_unit COMMAND test_geos_unit)
+file(GLOB_RECURSE _testfiles ${CMAKE_CURRENT_LIST_DIR}/**/*.cpp CONFIGURE_DEPEND)
+foreach(_testfile ${_testfiles})
+    string(REPLACE ${CMAKE_CURRENT_LIST_DIR}/ "" _testname ${_testfile})
+    string(REPLACE "Test.cpp" "" _testname ${_testname})
+    string(REPLACE "/" "-" _cmake_testname  ${_testname})
+    string(REPLACE "/" "::" _testname ${_testname})
+    add_test(NAME unit-${_cmake_testname} COMMAND test_geos_unit ${_testname})
+endforeach()
+unset(_cmake_testname)
+unset(_testfile)
+unset(_testfiles)
+unset(_testname)
+
