--- a/include/geos/geom/Makefile.am
+++ b/include/geos/geom/Makefile.am
@@ -21,6 +21,7 @@ geos_HEADERS = \
     CoordinateSequenceFactory.h \
     CoordinateSequenceFilter.h \
     CoordinateSequence.h \
+    DefaultCoordinateSequenceFactory.h \
     Dimension.h \
     Envelope.h \
     Envelope.inl \
