--- a/src/geom/Makefile.am
+++ b/src/geom/Makefile.am
@@ -16,6 +16,7 @@ libgeom_la_SOURCES = \
     CoordinateSequenceFactory.cpp  \
     CoordinateArraySequence.cpp \
     CoordinateArraySequenceFactory.cpp \
+    DefaultCoordinateSequenceFactory.cpp \
     Dimension.cpp \
     Envelope.cpp \
     Geometry.cpp \
