Add autotools build fix

--- a/src/operation/union/Makefile.am
+++ b/src/operation/union/Makefile.am
@@ -10,6 +10,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 libopunion_la_SOURCES = \
     CascadedPolygonUnion.cpp \
     CascadedUnion.cpp \
+    OverlapUnion.cpp \
     CoverageUnion.cpp \
     PointGeometryUnion.cpp \
     UnaryUnionOp.cpp
