Add overlay perf test

--- a/tests/perf/capi/CMakeLists.txt
+++ b/tests/perf/capi/CMakeLists.txt
@@ -16,3 +16,9 @@ add_executable(perf_memleak_mp_prep memleak_mp_prep.c)
 target_link_libraries(perf_memleak_mp_prep geos_c)
 
 add_test(perf_memleak_mp_prep ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_memleak_mp_prep)
+
+add_test(perf_memleak_mp_prep ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_memleak_mp_prep)
+
+add_executable(perf_intersection IntersectionPerfTest.cpp)
+target_link_libraries(perf_intersection geos_c)
+
