--- a/include/geos/operation/union/Makefile.am
+++ b/include/geos/operation/union/Makefile.am
@@ -11,6 +11,7 @@ geos_HEADERS = \
     CascadedPolygonUnion.h \
     CascadedUnion.h \
     CoverageUnion.h \
+    OverlapUnion.h \
     GeometryListHolder.h \
     PointGeometryUnion.h \
     UnaryUnionOp.h
