[drone] Add valgrindcheck call to drone-ci

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -23,6 +23,10 @@ steps:
     image: *test-image
     commands:
       - CXXFLAGS="-O0" make check V=0
+  - name: valgrindcheck
+    image: *test-image
+    commands:
+      - CXXFLAGS="-O0" make valgrindcheck V=0
   - name: docs
     image: *test-image
     commands:
