Standardize test file naming
Test file names should end in "Test.cpp"
Test suite names should match test file names

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -24,6 +24,7 @@ foreach(_testfile ${_testfiles})
     string(REPLACE "Test.cpp" "" _testname ${_testname})
     string(REPLACE "/" "-" _cmake_testname  ${_testname})
     string(REPLACE "/" "::" _testname ${_testname})
+    string(CONCAT _testname "geos::" ${_testname})
     add_test(NAME unit-${_cmake_testname} COMMAND test_geos_unit ${_testname})
 endforeach()
 unset(_cmake_testname)
