Inline many methods of Quadrant

--- a/include/geos/geomgraph/Makefile.am
+++ b/include/geos/geomgraph/Makefile.am
@@ -31,5 +31,6 @@ geos_HEADERS = \
     PlanarGraph.h \
     Position.h \
     Quadrant.h \
+    Quadrant.inl \
     TopologyLocation.h \
     TopologyLocation.inl
