Inline small methods of Depth

--- a/include/geos/geomgraph/Makefile.am
+++ b/include/geos/geomgraph/Makefile.am
@@ -9,6 +9,7 @@ geosdir = $(includedir)/geos/geomgraph
 
 geos_HEADERS = \
     Depth.h \
+    Depth.inl \
     DirectedEdge.h \
     DirectedEdge.inl \
     DirectedEdgeStar.h \
