Inline simple methods of BasicSegmentString

--- a/include/geos/noding/Makefile.am
+++ b/include/geos/noding/Makefile.am
@@ -9,6 +9,7 @@ geosdir = $(includedir)/geos/noding
 
 geos_HEADERS = \
 	BasicSegmentString.h \
+	BasicSegmentString.inl \
 	FastNodingValidator.h \
 	FastSegmentSetIntersectionFinder.h \
 	GeometryNoder.h \
