--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -87,6 +87,7 @@ geos_unit_SOURCES = \
 	capi/GEOSisValidDetailTest.cpp \
 	capi/GEOSLineString_PointTest.cpp \
 	capi/GEOSMakeValidTest.cpp \
+	capi/GEOSMinimumBoundingCircleTest.cpp \
 	capi/GEOSMinimumClearanceTest.cpp \
 	capi/GEOSMinimumRectangleTest.cpp \
 	capi/GEOSMinimumWidthTest.cpp \
