Add in CMake artifacts necessary to build/check in the autotools-generated tarball

--- a/benchmarks/capi/Makefile.am
+++ b/benchmarks/capi/Makefile.am
@@ -6,7 +6,10 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 top_builddir=@top_builddir@
 
-check_PROGRAMS = memleak_mp_prep
+check_PROGRAMS = \
+	memleak_mp_prep \
+	GEOSPreparedContainsPerfTest \
+	IntersectionPerfTest
 
 LIBS = $(top_builddir)/capi/libgeos_c.la
 AM_CPPFLAGS = -I$(top_builddir)/capi -I$(top_srcdir)/include
@@ -14,5 +17,10 @@ AM_CPPFLAGS = -I$(top_builddir)/capi -I$(top_srcdir)/include
 memleak_mp_prep_SOURCES = memleak_mp_prep.c
 memleak_mp_prep_LDADD = $(LIBS)
 
-EXTRA_DIST = CMakeLists.txt
+GEOSPreparedContainsPerfTest_SOURCES = GEOSPreparedContainsPerfTest.cpp
+GEOSPreparedContainsPerfTest_LDADD = $(top_builddir)/src/libgeos.la
 
+IntersectionPerfTest_SOURCES = IntersectionPerfTest.cpp
+IntersectionPerfTest_LDADD = $(top_builddir)/src/libgeos.la
+
+EXTRA_DIST = CMakeLists.txt
