--- a/benchmarks/algorithm/Makefile.am
+++ b/benchmarks/algorithm/Makefile.am
@@ -5,10 +5,19 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 top_builddir=@top_builddir@
 
-noinst_PROGRAMS = InteriorPointAreaPerfTest
+noinst_PROGRAMS = \
+	InteriorPointAreaPerfTest \
+	VoronoiPerfTest \
+	UnaryUnionSegmentsPerfTest
 
 InteriorPointAreaPerfTest_SOURCES = InteriorPointAreaPerfTest.cpp
 InteriorPointAreaPerfTest_LDADD = $(top_builddir)/src/libgeos.la
+
+VoronoiPerfTest_SOURCES = VoronoiPerfTest.cpp
+VoronoiPerfTest_LDADD = $(top_builddir)/src/libgeos.la
+
+UnaryUnionSegmentsPerfTest_SOURCES = UnaryUnionSegmentsPerfTest.cpp
+UnaryUnionSegmentsPerfTest_LDADD = $(top_builddir)/src/libgeos.la
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 AM_CPPFLAGS += -I$(top_srcdir)/src/io/markup
