--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,6 +2,8 @@
 # This file is part of project GEOS (http://trac.osgeo.org/geos/)
 bin_SCRIPTS = geos-config
 
-EXTRA_DIST = CMakeLists.txt
+EXTRA_DIST = \
+	CMakeLists.txt \
+	geos-config.cmake
 
 SUBDIRS = astyle
