Harmonize cmake/autotools build targets

--- a/tests/perf/capi/Makefile.am
+++ b/tests/perf/capi/Makefile.am
@@ -6,13 +6,16 @@ prefix=@prefix@
 top_srcdir=@top_srcdir@
 top_builddir=@top_builddir@
 
-check_PROGRAMS = memleak_mp_prep
+check_PROGRAMS = memleak_mp_prep perf_intersection
 
 LIBS = $(top_builddir)/capi/libgeos_c.la
 AM_CPPFLAGS = -I$(top_builddir)/capi -I$(top_srcdir)/include
 
 memleak_mp_prep_SOURCES = memleak_mp_prep.c
 memleak_mp_prep_LDADD = $(LIBS)
+
+perf_intersection_SOURCES = IntersectionPerfTest.cpp
+perf_intersection_LDADD = $(LIBS)
 
 EXTRA_DIST = CMakeLists.txt
 
