Backport perf tests to 3.7

--- a/tests/perf/capi/CMakeLists.txt
+++ b/tests/perf/capi/CMakeLists.txt
@@ -22,3 +22,5 @@ add_test(perf_memleak_mp_prep ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_memleak_mp_
 add_executable(perf_intersection IntersectionPerfTest.cpp)
 target_link_libraries(perf_intersection geos_c)
 
+add_executable(perf_geospreparedcontains GEOSPreparedContainsPerfTest.cpp)
+target_link_libraries(perf_geospreparedcontains geos_c)
