Update geos-config tool for consistency and escape paths
* Specify bash, and use printf to escape paths (if needed)
* Restore bash variables, e.g. ${prefix}, and use CMake's @ONLY option
* Consistent indents and style between .in and .cmake versions
* Remove exec_prefix, which has never been used
* Disable configure and install for MSVC builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,14 +270,21 @@ add_subdirectory(doc)
 # Install and export targets - support 'make install' or equivalent
 #-----------------------------------------------------------------------------
 include(CMakePackageConfigHelpers)
+
+set(GEOS_INSTALL_FILES
+  "${CMAKE_CURRENT_BINARY_DIR}/geos-config-version.cmake")
 write_basic_package_version_file(
   "${CMAKE_CURRENT_BINARY_DIR}/geos-config-version.cmake"
   VERSION ${GEOS_VERSION}
   COMPATIBILITY AnyNewerVersion)
 
-configure_file(cmake/geos-config.cmake
-  "${CMAKE_CURRENT_BINARY_DIR}/geos-config.cmake"
-  COPYONLY)
+if(NOT MSVC)
+  configure_file(cmake/geos-config.cmake
+    "${CMAKE_CURRENT_BINARY_DIR}/geos-config.cmake"
+    COPYONLY)
+  list(APPEND GEOS_INSTALL_FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/geos-config.cmake")
+endif()
 
 install(TARGETS geos geos_cxx_flags
   EXPORT geos-targets
@@ -301,8 +308,7 @@ install(EXPORT geos-targets
   DESTINATION lib/cmake/GEOS)
 
 install(FILES
-  "${CMAKE_CURRENT_BINARY_DIR}/geos-config.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/geos-config-version.cmake"
+  ${GEOS_INSTALL_FILES}
   DESTINATION lib/cmake/GEOS)
 install(DIRECTORY
   "${CMAKE_CURRENT_LIST_DIR}/include/geos"
