--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -12,14 +12,20 @@
 #################################################################################
 
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/geos-config.cmake
-               ${CMAKE_CURRENT_BINARY_DIR}/geos-config)
+if(NOT MSVC)
+  configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/geos-config.cmake
+    ${CMAKE_CURRENT_BINARY_DIR}/geos-config
+    @ONLY NEWLINE_STYLE UNIX)
 
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/geos-config
-        DESTINATION bin
-        PERMISSIONS
-        OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+  install(FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/geos-config
+    DESTINATION bin
+    PERMISSIONS
+      OWNER_READ OWNER_EXECUTE
+      GROUP_READ GROUP_EXECUTE
+      WORLD_READ WORLD_EXECUTE)
+endif()
 
 add_subdirectory(astyle)
 
