--- a/tools/geos-config.in
+++ b/tools/geos-config.in
@@ -1,11 +1,12 @@
-#!/bin/sh
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
+#!/bin/bash -e
+
+# escape paths
+prefix=$(printf %q "@prefix@")
+libdir=$(printf %q "@libdir@")
 
 usage()
 {
-    cat <<EOF
+  cat <<EOF
 Usage: geos-config [OPTIONS]
 Options:
      [--prefix]
@@ -20,51 +21,53 @@ Options:
      [--includes]
      [--jtsport]
 EOF
-    exit $1
+  exit $1
 }
+
 if test $# -eq 0; then
   usage 1 1>&2
 fi
+
 while test $# -gt 0; do
-case "$1" in
+  case "$1" in
     -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
     *) optarg= ;;
-esac
-case $1 in
+  esac
+  case $1 in
     --prefix)
-    echo @prefix@
-     ;;
+      echo ${prefix}
+      ;;
     --version)
-    echo @VERSION@
-     ;;
-    --cflags)
-    echo -I@prefix@/include
+      echo @VERSION@
       ;;
     --libs)
       # TODO: make an alias for --clibs
       # see http://trac.osgeo.org/geos/ticket/497
-      echo -L@libdir@ -lgeos-@VERSION_RELEASE@
+      echo -L${libdir} -lgeos-@VERSION_RELEASE@
       ;;
     --clibs)
-      echo -L@libdir@ -lgeos_c
+      echo -L${libdir} -lgeos_c
       ;;
     --cclibs)
-      echo -L@libdir@ -lgeos
+      echo -L${libdir} -lgeos
       ;;
     --static-clibs)
-      echo -L@libdir@ -lgeos_c -lgeos -lm
+      echo -L${libdir} -lgeos_c -lgeos -lm
       ;;
     --static-cclibs)
-      echo -L@libdir@ -lgeos -lm
+      echo -L${libdir} -lgeos -lm
+      ;;
+    --cflags)
+      echo -I${prefix}/include
       ;;
     --ldflags)
-      echo -L@libdir@
+      echo -L${libdir}
       ;;
     --includes)
-      echo @prefix@/include
+      echo ${prefix}/include
       ;;
     --jtsport)
-    echo @JTS_PORT@
+      echo @JTS_PORT@
       ;;
     *)
       usage 1 1>&2
