Add max inscribed circle to make file so we can start compiling.

--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -24,6 +24,7 @@ libalgorithm_la_SOURCES = \
 	Intersection.cpp \
 	LineIntersector.cpp \
 	Length.cpp \
+	MaximumInscribedCircle.cpp \
 	MinimumBoundingCircle.cpp \
 	MinimumDiameter.cpp \
 	NotRepresentableException.cpp \
