Switch to docker.osgeo.org

--- a/.drone-1.0.yml
+++ b/.drone-1.0.yml
@@ -1,7 +1,7 @@
 # This is for the dronie 1.0 agent
 # https://docs.drone.io/user-guide/pipeline/steps/ https://docs.drone.io/user-guide/pipeline/migrating/
-# See https://git.osgeo.org/gogs/geos/geos-docker
-test-image: &test-image docker.kbt.io/geos/build-test:alpine
+# See https://git.osgeo.org/gitea/geos/geos-docker
+test-image: &test-image docker.osgeo.org/geos/build-test:alpine
 
 kind: pipeline
 name: default
