Draft of LargestEmptyCircle and small fixes to MaximumInscribedCircle

--- a/include/geos/algorithm/construct/Makefile.am
+++ b/include/geos/algorithm/construct/Makefile.am
@@ -8,4 +8,5 @@ EXTRA_DIST =
 geosdir = $(includedir)/geos/algorithm/construct
 
 geos_HEADERS = \
+    LargestEmptyCircle.h \
     MaximumInscribedCircle.h
