--- a/src/algorithm/construct/Makefile.am
+++ b/src/algorithm/construct/Makefile.am
@@ -8,6 +8,7 @@ noinst_LTLIBRARIES = libconstruct.la
 AM_CPPFLAGS = -I$(top_srcdir)/include 
 
 libconstruct_la_SOURCES = \
+    LargestEmptyCircle.cpp \
     MaximumInscribedCircle.cpp
 
 libconstruct_la_LIBADD = 
